# coma

./: Makefile  Readme  Readme.org
figures/: Makefile  bug-life-cycle.dot  bug-life-cycle.eps  data-model.dia  group-structure.fig
handouts/: Makefile  handout1.tex  handout2.tex  handout3.tex  handout4.tex  handout5.tex  handout6.tex  handout7.tex
java/: java_architecture.tex  sqldaten.txt
java/coma/: .classpath  README  TODO  build-dontuse-mky.xml  build-dontuse.xml  build-snert.xml  build.properties  build.props  build.xml  build2.xml  coma.xml  db_schema.sql  index.html  jaas.config  web.xml
java/spec/: architecture.tex  schedule.tex
org/: activity.txt  gruppen.txt  tischvorlage.tex
php1/: Readme  makeInstall  post-commit  readme
php1/Conv/: conventions.tex
php1/Conventions/: conventions.tex
php1/Project CoMa/: phpInfo.php  test.php
php1/architecture/: coma-prototyp.fla  coma-prototyp.swf  coma-prototyp.txt
php1/coding_conventions/: conventions.tex  elve.tex  handout.tex
php1/coma1/: .htaccess  INSTALL  INSTALL.PHP  Kopie von chair_konf.php  README  apply_author.php  apply_participant.php  apply_reviewer.php  apply_role.php  author_createpaper.php  author_editpaper.php  author_papers.php  author_start.php  autor.php  autor_nach.php  autor_verw.php  chair-dcm.php  chair.php  chair_arti.php  chair_benu.php  chair_confconfig.php  chair_confconfig_ext.php  chair_distribution.php  chair_konf.php  chair_nach.php  chair_paperdetails.php  chair_paperlist.php  chair_paperreviews.php  chair_papers.php  chair_prefers.php  chair_reviewdetails.php  chair_reviews.php  chair_reviewsreviewer.php  chair_start.php  chair_userdetails.php  chair_userlist.php  chair_users.php  chair_verw.php  conf_profile.php  confirm_register.php  (+68 more)
php1/spec/: complete.txt  installation_xp.txt  main.txt  navigation.txt
php1/sql/: php1.sql
php2/: INSTALL.txt  README.TXT  choose_conference.php  config.inc.php  index.php  login.php  logout.php  reviewer.php  rtptest.php  security.php  style2.css  user_properties.php
php2/include/: index.php
php2/includes/: config.inc.php  definitions.inc.php  login.inc.php  ptra.inc.php  rights.inc.php  rtp.lib.php  sql.class.php  tasks.inc.php  templates.inc.php  tools.inc.php
php2/install/: install.php  install.sql.php  install2.php  install3.php
php2/modules/: config.inc.php
php2/old_sql/: Tabellen-3 (Vorschlag).txt
php2/old_template/: conferences-header.php  conferences-main.php  header.php  login.php  main-header.php  user-attr.php
php2/rights/: rights.inc.php
php2/spec/: main.txt  plan.tex
php2/sql/: Tabellen-3 (Vorschlag).txt
php2/sql_dumps/: PTRATable.sql  db_schema2.sql  db_schema2_light.sql  hardcoded_sql_data.sql  rights_structure.sql  testdatenbank_mit daten.sql
php2/template/: conferences-footer.php  empty.tpl.php  upper-links.php
php2/templates/: ADMIN_Conferences_change.tpl.php  ADMIN_accessdataStepTwo.tpl.php  ADMIN_accessdataView.tpl.php  ADMIN_conferenceChange.tpl.php  ADMIN_conferenceCreate.tpl.php  ADMIN_conferenceList.tpl.php  ADMIN_conferencesCreateChair.tpl.php  AUTHOR_edit_form.tpl.php  AUTHOR_new_conference.tpl.php  AUTHOR_new_form.tpl.php  AUTHOR_no_new_papers.tpl.php  AUTHOR_view_papers.tpl.php  CFP_register_known.tpl.php  CFP_view_view.tpl.php  CHAIR_allPapersOfConference.tpl.php  CHAIR_allPapersOfUser.tpl.php  CHAIR_allUsersOfConference.tpl.php  CHAIR_chooseConf.tpl.php  CHAIR_conference.tpl.php  CHAIR_inviteUser.tpl.php  CHAIR_listPapers.tpl.php  CHAIR_paper.tpl.php  CHAIR_paperOfUser.tpl.php  CHAIR_program_chooseConf.tpl.php  CHAIR_user.tpl.php  CHAIR_viewall.tpl.php  CHANGEPASS_ok.tpl.php  CHANGEPASS_prepare.tpl.php  FORUM_newmessage.tpl.php  FORUM_overview.tpl.php  FORUM_viewconf.tpl.php  FORUM_viewforum.tpl.php  LOGIN.tpl.php  PROFILE_changePass.tpl.php  PROFILE_dataChanged.tpl.php  PROFILE_default.tpl.php  PROFILE_participate.tpl.php  PROFILE_roles.tpl.php  PROFILE_showData.tpl.php  (+17 more)
python/: BUGS  Makefile.am  README  coma-aux.sql  coma-mysql-del.sql  coma-psql-del.sql  coma-psql.sql  coma.conf  coma.conf.in  coma.sql  coma_setup.py  comaprocmail.in  comasetup.in  configure.ac  pycoma.conf.in  pycoma.spec.in  setup.py
python/coma/: Makefile.am  Session.py  actions.py  coma.css  coma.py  comaconfig.py  comadb.py  comamail.py  comapg.py  comapsql.py  index.py  index.py.old  login.py  logout.py  new-account.py  new-conference.py  new-paper.py  procmail.py  session.py  setup.py
python/coma/templates/: Makefile.am  bad-page.xml  coma.css  error-user.xml  index-guest.xml  index-user.xml  index.xml  login-error.xml  login-success.xml  login.xml  logout.xml  new-account-error.xml  new-account.xml  new-conference-error.xml  register-mail.txt  register-success.xml  register.xml  summary.xml
python/pycoma/: Makefile.am  __init__.py.in  coma.py  comapsql.py  config.py.in  database.py  index.py.in
python/pycoma/templates/: bad-page.xml  error-login.xml  index.xml  logout.xml  new-conference.xml  new-paper.xml  redirect.xml  register-error.xml  register-success.xml  session-expired.xml  session-missing.xml
python/templates/: Makefile.am  coma.css  new-conference-error.xml  new-conference.xml  new-paper.xml  redirect.xml  register-error.xml  session-expired.xml  session-missing.xml  summary.xml
requirements/: Makefile  Readme  Todo  abstract.tex  introduction.tex  main.tex  preamble.tex  switches.tex
slides/: Makefile  Readme  comaintroduction.tex  lookingback.tex  main-coma.tex  main.tex  preamble.tex  timeline.fig  timeline.ps
snert/: Makefile  README  subversion.tex  tomcat.tex
spec/: Makefile  abstract.tex  coma.bib  data.txt  datamodel.tex  main.tex  preamble.tex  switches.tex
sql/: Tabellen-2.txt  Tabellen.txt  db_schema.jude  db_schema.sql  db_schema.txt  sqlschema.jude  tables_final_version
tests/: fill_database.php  post-commit  post_commit  test.php  update_php1.sh
tex/CVS/: Root  (+1 more)
web/: Makefile  conventions.tex  groups.tex  main.tex  material.tex  meetings.tex  preamble.tex  requirements.tex  review-instructions.tex  review.tex  snapshots.tex  switches.tex  timeline.tex  tools.tex
(+666 files in other folders)
